# sunny_agent

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  start.sh  start_feishu_worker.sh  start_worker.sh  飞书场景消息传递流程.md
app/: .env.example  builtin_sync.py  chat_ops.py  config.py  main.py  notify.py  worker.py
app/api/: admin_feishu.py  auth.py  chat.py  connectors.py  cron_jobs.py  files.py  health.py  notifications.py  observability.py  plugins.py  project_files.py  projects.py  response.py  roles.py  sessions.py  skills.py  tasks.py  upload_utils.py  users.py
app/cache/: redis_client.py
app/connector/: __init__.py  client.py  platform.py  tool_loader.py
app/cron/: scanner.py  service.py  utils.py
app/db/: engine.py  filters.py
app/execution/: agent_context.py  mode_context.py  pipeline.py  plugin_context.py  router.py  schemas.py  session_context.py  (+3 more)
doc/: Sunnyagent_spec_v1.md  deployment_resource_plan.md  roadmap.md  roadmap_executive_summary.md  sunnyagent_v2.0_product_spec.md  v2.0_capacity_plan.md
docs/: feishu-card-status-guide.md
evaluator_skill/: SKILL.md  eval_config.yaml.example
examples/: feishu_card_status_example.py
infra/: docker-compose.yml  init-db.sql  langfuse-compose.yml
sandbox_service/: Dockerfile  docker-compose.yml  main.py  readme.md  requirements.txt  sandbox.Dockerfile
scripts/: add_user.py  chat_console.py  deep_research_events_20260318_111929.json  deep_research_report_20260318_111929.md  langfuse_eval.py  seed_prompts.py  sync_prompts_to_milvus.py  test_context_limit.py
(+307 files in other folders)
